committing sections, images, and footer to the site.

--- a/style.css
+++ b/style.css
@@ -1,10 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
 
+
+:root{
+    /* custom fonts  */
+    --ff-primary: 'Poppins', sans-serif;
+
+    /* custom colors  */
+    --clr-light: #f7f7f7;
+  }
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: var( --ff-primary);
 }
 
 section {
@@ -21,7 +30,7 @@ section {
 }
 
 header a:hover {
-    color: red;
+    opacity: .5;
 }
 
 header {
@@ -71,15 +80,21 @@ header ul li a{
     max-width: 600px;
 }
 
+.content .textBox h1 {
+    color: #fff;
+    font-size: 4em;
+    font-weight: 500;
+    text-transform: uppercase;
+    height: 1.1em;
+}
 .content .textBox h2 {
     color: #fff;
-    font-size: 3em;
-    line-height: 1.5em;
+    font-size: 2.5em;
     font-weight: 500;
     text-transform: uppercase;
 }
 
-.content .textBox h2 span{
+.content .textBox h1 span{
     font-size: 2em;
 }
 
@@ -181,7 +196,150 @@ header ul li a{
     transition: all 0.2s ease-in-out;
   }
 
+
+/* glow button effect */
+
 .glow-button:hover {
     color: rgba(255, 255, 255, 1);
-    box-shadow: 0 5px 15px rgba(254, 254, 254, 0.4);
+    box-shadow: 0 5px 15px rgba(254, 254, 254, 0.6);
   }
+
+/* social proof section */
+.social-proof{
+    width: 100vw;
+    height: 100%;
+    background: var(--clr-light);
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 20px 25px 0 25px;
+    min-height: 80vh;
+}
+
+.social-proof-names{
+    padding-left: 5em;
+    max-width: 38em;
+}
+
+.social-proof-names ul{
+    list-style: none;
+}
+
+.social-proof-names h2{
+    font-size: 2em;
+    line-height: 1.2em;
+    font-weight: 500;
+    text-transform: uppercase;
+    padding-bottom: .3em;
+}
+
+.social-proof-image img{
+    height: 100%;
+    width: 35em;
+}
+
+.highlight-word{
+    font-size: 3em;
+    text-transform: uppercase;
+}
+
+/* blurb section  */
+.brief-blurb{
+    width: 100%;
+    min-height: 40vh;
+    padding: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("images/fossil-gen-5.jpg");
+    background-repeat: no-repeat, repeat;
+    background-size: cover;
+    background-position-y: -15em;
+    background-color: #111;
+    background-blend-mode: screen;
+}
+
+.card{
+    background-color: #f7f7f7;
+    width: 45em;
+    padding: 1.5em
+}
+
+.cco-quote{
+    float: right;
+}
+
+/* Footer code */
+.footer{
+    position: absolute;
+    background-color: #111;
+    height: auto;
+    width: 100vw;
+    font-family: 'Roboto', sans-serif;
+    padding-top: 20px;
+    color: #fff;
+    z-index: 1000;
+}
+
+.footer-content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.footer-content h3{
+    font-size: 1.8rem;
+    font-weight: 400;
+    text-transform: capitalize;
+    line-height: 2rem;
+}
+
+.footer-content p{
+    max-width: 500px;
+    margin: 10px auto;
+    line-height: 28px;
+    font-size: 14px;
+}
+
+
+.footer-bottom{
+    background-color: #111;
+    width: 100vw;
+    padding: 0 0 25px 0;
+    text-align: center;
+}
+
+.footer-bottom p{
+    word-spacing: 2px;
+    text-transform: capitalize;
+}
+
+.socials{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0 3rem 0;
+  }
+  
+  .socials li{
+    margin: 0 10px;
+  
+  }
+  
+  .socials a{
+    text-decoration: none;
+    color: #fff;
+  }
+  
+  .socials a i{
+    font-size: 1.1rem;
+    transition: color .4s ease;
+  }
+
+  .socials a:hover{
+    color: red;
+  }
+  
+  
